--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -20,8 +20,62 @@
     </div>
 
     <div class="col-12" *ngIf="existFile">
-      <button class="btn btn-primary col-6 offset-3" (click)="listarPreguntasJson()">Inciar Juego</button>
+      <button class="btn btn-primary col-6 offset-3" data-toggle="modal" data-target="#ModalIniciarJuego">Inciar
+        Juego</button>
     </div>
 
+  </div>
+</div>
+
+
+<div class="container" *ngFor="let item of questions">
+  <div class="row justify-content-center">
+    <div class="col-12">
+      <p class="text-center"> {{ item?.PREGUNTA }} </p>
+    </div>
+
+    <div class="row col-md-12">
+      <div class="col-md-5 btn-questions">
+        <p class="text-center"> {{ item?.A }} </p>
+      </div>
+      <div class="col-md-5 btn-questions">
+        <p class="text-center"> {{ item?.B }} </p>
+      </div>
+    </div>
+
+    <div class="row col-md-12">
+      <div class="col-md-5 btn-questions">
+        <p class="text-center"> {{ item?.C }} </p>
+      </div>
+      <div class="col-md-5 btn-questions">
+        <p class="text-center"> {{ item?.D }} </p>
+      </div>
+    </div>
+
+    <button class="btn btn-primary" (click)="siguiente()" >Siguiente</button>
+  </div>
+</div>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="ModalIniciarJuego" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">CONFIRMACIÓN</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ¿Esta listo para iniciar el juego?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">NO</button>
+        <button type="button" class="btn btn-primary" (click)="listarPreguntasJson()">SI</button>
+      </div>
+    </div>
   </div>
 </div>
