--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -2,7 +2,7 @@
   <a class="navbar-brand" href="#">
     <img src="https://image.flaticon.com/icons/svg/126/126341.svg" width="30" height="30"
       class="d-inline-block align-top" alt="">
-    ¿Quién quiere ser Catequista?
+      ¿Quién quiere ser Arquitecto de Software?
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
@@ -26,20 +26,26 @@
 <!-- Mensaje Incial-->
 <div class="container-fluid row justify-content-center" *ngIf="!existFile">
   <div class="col-md-12">
-    <h1 class="text-center title">¿Quién quiere ser Catequista?</h1> <br>
+    <h1 class="text-center title">¿Quién quiere ser Arquitecto de Software?</h1> <br>
   </div>
   <div class="col-md-12 row justify-content-center">
-    <img src="../../../assets/images/asking.png" alt="">
+    <img src="../../../assets/images/desarrollador-de-software.png" alt="" width="400">
   </div>
 </div>
 <!-- Body-->
 <div class="game-container" *ngIf="existFile">
   <div class="container" >
     <div class="row justify-content-center">
-      <div class="col-12 offset-9">
-        <button class="btn btn-primary btn-lg col-md-3 btn-play-container" id="btn-play" data-toggle="modal"
+      <div class="col-md-12 mt-5">
+        <h3 class="text-center">Pruebas tus conocimientos en Arquitectura de Software</h3>
+
+        <h3>Instrucciones:</h3>
+        <p>Tendrás </p>
+        <div class="row justify-content-center">
+          <button class="btn btn-primary btn-lg mt-5" id="btn-play" data-toggle="modal"
           data-target="#ModalIniciarJuego">Inciar
           Juego</button>
+        </div>
       </div>
     </div>
   </div>
