--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -29,7 +29,7 @@
     <h1 class="text-center title">¿Quién quiere ser Arquitecto de Software?</h1> <br>
   </div>
   <div class="col-md-12 row justify-content-center">
-    <img src="../../../assets/images/desarrollador-de-software.png" alt="" width="400">
+    <img src="../../../assets/images/logo.png" alt="" >
   </div>
 </div>
 <!-- Body-->
@@ -40,7 +40,7 @@
         <h3 class="text-center">Pruebas tus conocimientos en Arquitectura de Software</h3>
 
         <h3>Instrucciones:</h3>
-        <p>Tendrás </p>
+        <!-- <p>Tendrás </p> -->
         <div class="row justify-content-center">
           <button class="btn btn-primary btn-lg mt-5" id="btn-play" data-toggle="modal"
           data-target="#ModalIniciarJuego">Inciar
@@ -237,7 +237,7 @@
         <div class="row justify-content-center">
             <img src="../../../assets/images/negative-vote.png" alt="">
         </div>
-        
+
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-success" (click)="gameOver()">OK</button>
@@ -262,7 +262,7 @@
         <h2 class="text-center">{{textSure}}</h2>
         <div class="row justify-content-center">
             <img [src]="imgSure" alt="">
-        </div>        
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">OK</button>
