--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,273 +1,22 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">
-    <img src="https://image.flaticon.com/icons/svg/126/126341.svg" width="30" height="30"
-      class="d-inline-block align-top" alt="">
-      ¿Quién quiere ser Arquitecto de Software?
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="../../../assets/files/Plantilla_Preguntas.xlsx" download>Descargar Plantilla</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" data-toggle="modal" data-target="#ModalCargarArchivo">Cargar Archivo</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" data-toggle="modal" data-target="#ModalReiniciarJuego">Reiniciar Juego</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
-<!-- Mensaje Incial-->
-<div class="container-fluid row justify-content-center" *ngIf="!existFile">
-  <div class="col-md-12">
-    <h1 class="text-center title">¿Quién quiere ser Arquitecto de Software?</h1> <br>
+<div class="container">
+  <div class="row justify-content-center col-md-12 my-5">
+    <h1 class="text-center title">{{ gameName }}</h1> <br>
   </div>
   <div class="col-md-12 row justify-content-center">
-    <img src="../../../assets/images/logo.png" alt="" >
-  </div>
-</div>
-<!-- Body-->
-<div class="game-container" *ngIf="existFile">
-  <div class="container" >
-    <div class="row justify-content-center">
-      <div class="col-md-12 mt-5">
-        <h3 class="text-center">Pruebas tus conocimientos en Arquitectura de Software</h3>
-
-        <h3>Instrucciones:</h3>
-        <!-- <p>Tendrás </p> -->
-        <div class="row justify-content-center">
-          <button class="btn btn-primary btn-lg mt-5" id="btn-play" data-toggle="modal"
-          data-target="#ModalIniciarJuego">Inciar
-          Juego</button>
-        </div>
-      </div>
-    </div>
+    <img src="../../../assets/images/logo.png" alt="">
   </div>
 
-  <div class="row justify-content-center content-help">
-    <div class="row justify-content-center col-md-10 offset-1" *ngIf="questions.length > 0">
-      <div class="col-md-3">
-        <button class="btn btn-light btn-call-friend" (click)="callFriend()" [disabled]="blockCall"> <img
-            src="../../../assets/images/telephone.png" alt="callFriend"> </button>
+  <div class="container my-5">
+    <div class="row justify-content-md-center">
+      <div class="col-md-auto">
+        <button type="button" class="btn btn-danger btn-lg" (click)="goToPlay()">¡JUGAR!</button>
       </div>
-      <div class="col-md-3">
-        <button class="btn btn-light btn-option-50" (click)="option50To50()" [disabled]="block50"> <img
-            src="../../../assets/images/followers.png" alt="option50To50"> </button>
+      <div class="col-md-auto">
+        <button type="button" class="btn btn-info btn-lg" (click)="goToInstructions()">INSTRUCCIONES</button>
       </div>
-      <div class="col-md-3">
-        <button class="btn btn-light btn-public-support" (click)="publicSupport()" [disabled]="blockPublic"> <img
-            src="../../../assets/images/feedback.png" alt="publicSupport"></button>
-      </div>
-      <div class="col-md-3">
-        <div class="points-board">
-          <h2 class="text-center points-number"> {{ points }} </h2>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container" *ngFor="let item of questions">
-    <div class="row justify-content-center">
-      <div class="col-md-12 content-question">
-        <p class="text-center"> {{count+1}}. {{ item?.PREGUNTA }} </p>
-      </div>
-    </div>
-    <div class="row justify-content-center">
-      <div class="row col-md-12">
-        <div class="col-md-6">
-          <button class="btn btn-primary btn-lg btn-block btn-questions" id="BtnOpcA" (click)="validateAnswer('A')"
-            [disabled]="press">
-            <p class="text-center" id="OpcA"> {{ item?.A }} </p>
-          </button>
-        </div>
-        <div class="col-md-6">
-          <button class="btn btn-primary btn-lg btn-block btn-questions" id="BtnOpcB" (click)="validateAnswer('B')"
-            [disabled]="press">
-            <p class="text-center" id="OpcB"> {{ item?.B }} </p>
-          </button>
-        </div>
-      </div>
-
-      <div class="row col-md-12">
-        <div class="col-md-6">
-          <button class="btn btn-primary btn-lg btn-block btn-questions" id="BtnOpcC" (click)="validateAnswer('C')"
-            [disabled]="press">
-            <p class="text-center" id="OpcC"> {{ item?.C }} </p>
-          </button>
-        </div>
-        <div class="col-md-6">
-          <button class="btn btn-primary btn-lg btn-block btn-questions" id="BtnOpcD" (click)="validateAnswer('D')"
-            [disabled]="press">
-            <p class="text-center" id="OpcD"> {{ item?.D }} </p>
-          </button>
-        </div>
-      </div>
-      <div class="row col-md-12 justify-content-center btn-next">
-        <div class="col-md-6">
-          <button class="btn btn-outline-success btn-lg btn-block" type="submit" (click)="answerConfirm()"
-            [disabled]="selectedValidate">Validar Respuesta</button>
-        </div>
-        <div class="col-md-6">
-          <button class="btn btn-secondary btn-lg btn-block" (click)="next()" [disabled]="selected">Siguiente
-            Pregunta</button>
-        </div>
+      <div class="col-md-auto">
+        <button type="button" class="btn btn-warning btn-lg" (click)="goToAbout()">ACERCA DE</button>
       </div>
     </div>
   </div>
 </div>
-
-<!-- Modal Cargar Archivo -->
-<div class="modal fade" id="ModalCargarArchivo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">CARGAR PREGUNTAS</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="col-12">
-          <p class="text-center">Por favor cargue su archivo de preguntas.</p>
-        </div>
-
-        <div class="custom-file row">
-          <input type="file" class="custom-file-input" id="customFile" (change)="uploadQuestions($event)"
-            accept=".xlsx, .xls">
-          <label class="custom-file-label" for="customFile"> {{textArchivo}} </label>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Fin Modal Cargar Archivo -->
-
-<!-- Modal Iniciar Juego -->
-<div class="modal fade" id="ModalIniciarJuego" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">CONFIRMACIÓN</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ¿Esta listo para iniciar el juego?
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">NO</button>
-        <button type="button" class="btn btn-primary" (click)="questionsJson()">SI</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Fin Modal Iniciar Juego -->
-
-<!-- Modal Reiniciar Juego -->
-<div class="modal fade" id="ModalReiniciarJuego" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">REINICIAR JUEGO</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ¿Esta listo para reiniciar el juego?
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">NO</button>
-        <button type="button" class="btn btn-primary" (click)="reset()">SI</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Fin Modal Reiniciar Juego -->
-
-<!-- Modal Ayudas -->
-<div class="modal fade" id="ModalAyudas" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel"> {{ titleModal }} </h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body row justify-content-center">
-        <img [src]="imgModal" alt="image">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">TERMINAR</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Fin Modal Ayudas -->
-
-<!-- Modal Validación -->
-<div class="modal fade bd-example-modal-lg" id="ModalValidacion" tabindex="-1" role="dialog"
-  aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">EL JUEGO HA TERMINADO</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <h2 class="text-center">Lo sentimos has perdido!!</h2>
-        <h1 class="text-center">Puntaje: {{points}}</h1>
-        <div class="row justify-content-center">
-            <img src="../../../assets/images/negative-vote.png" alt="">
-        </div>
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-success" (click)="gameOver()">OK</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Fin Modal Validación -->
-
-<!-- Modal Seguros -->
-<div class="modal fade" id="ModalSeguro" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel"> {{titleSure}} </h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <h2 class="text-center">{{textSure}}</h2>
-        <div class="row justify-content-center">
-            <img [src]="imgSure" alt="">
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">OK</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Fin Modal Seguros -->
