Pendiente instrucciones y acerca de

--- a/src/app/pages/instructions/instructions.component.html
+++ b/src/app/pages/instructions/instructions.component.html
@@ -1,1 +1,4 @@
 <p>instructions works!</p>
+
+<a class="btn btn-info" href="../../../assets/files/Plantilla_Preguntas.xlsx" download><i
+    class="fas fa-file-download"></i> Descargar Plantilla</a>
