--- a/src/app/pages/play/play.component.css
+++ b/src/app/pages/play/play.component.css
@@ -3,9 +3,9 @@
   margin-top: 15px;
 }
 
-#btn-play {
+/* #btn-play {
   border-radius: 20px;
-}
+} */
 .content-help {
   margin-top: 5%;
 }
@@ -25,9 +25,10 @@
 }
 
 .points-board {
-  background-image: url('../../../assets/images/score.png');
+  /* background-image: url('../../../assets/images/score.png');
+  width: 50%;
   height: 100%;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
 }
 
 .points-number{
@@ -55,6 +56,7 @@
   font-weight: bold;
   margin: 5px 0px 5px 0px;
   border-radius: 20px;
+  font-size: 1.1rem;
 }
 
 .btn-questions:disabled {
@@ -75,4 +77,8 @@
 
 .answer-bad {
   background-color: #dc3545;
+}
+
+.font-silver {
+  color: #00000080;
 }
