--- a/src/app/pages/play/play.component.html
+++ b/src/app/pages/play/play.component.html
@@ -1,7 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" routerLink="/home">
-    <img src="../../../assets/images/logo.png" width="30" height="30"
-      class="d-inline-block align-top" alt="">
+    <img src="../../../assets/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> INICIO
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
@@ -10,64 +9,98 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="../../../assets/files/Plantilla_Preguntas.xlsx" download><i class="fas fa-file-download"></i> Descargar Plantilla</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" data-toggle="modal" data-target="#ModalCargarArchivo"><i class="fas fa-file-upload"></i> Cargar Archivo</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" data-toggle="modal" data-target="#ModalReiniciarJuego"><i class="fas fa-trash-restore"></i> Reiniciar Juego</a>
+        <!-- <a class="nav-link" href="../../../assets/files/Plantilla_Preguntas.xlsx" download><i
+            class="fas fa-file-download"></i> Descargar Plantilla</a> -->
       </li>
     </ul>
   </div>
+  <form class="form-inline">
+    <li class="nav-item form-inline font-silver">
+      <a class="nav-link font-silver" href="#" data-toggle="modal" data-target="#ModalReiniciarJuego"><i
+          class="fas fa-trash-restore"></i> Reiniciar Juego</a>
+    </li>
+  </form>
+  <form class="form-inline">
+    <li class="nav-item form-inline font-silver">
+      <a class="nav-link font-silver" href="#" data-toggle="modal" data-target="#ModalReiniciarJuego"><i
+          class="fas fa-door-open"></i> Salir</a>
+    </li>
+  </form>
 </nav>
 
 <!-- Mensaje Incial-->
 <div class="container-fluid row justify-content-center" *ngIf="!existFile">
   <div class="col-md-12">
-    <h1 class="text-center title">¿Quién quiere ser Arquitecto de Software?</h1> <br>
+    <h1 class="text-center title"> {{ textArchivo }}</h1> <br>
   </div>
   <div class="col-md-12 row justify-content-center">
-    <img src="../../../assets/images/logo.png" alt="" >
+    <img src="../../../assets/images/logo.png" alt="">
   </div>
-</div>
-<!-- Body-->
-<div class="game-container" *ngIf="existFile">
-  <div class="container" >
-    <div class="row justify-content-center">
-      <div class="col-md-12 mt-5">
-        <h3 class="text-center">Pruebas tus conocimientos en Arquitectura de Software</h3>
-
-        <h3>Instrucciones:</h3>
-        <!-- <p>Tendrás </p> -->
-        <div class="row justify-content-center">
-          <button class="btn btn-primary btn-lg mt-5" id="btn-play" data-toggle="modal"
-          data-target="#ModalIniciarJuego">Inciar
-          Juego</button>
-        </div>
+  <div class="container my-5">
+    <div class="row justify-content-md-center">
+      <div class="col-md-auto">
+        <a class="btn btn-info btn-lg" href="#" data-toggle="modal" data-target="#ModalCargarArchivo"><i
+            class="fas fa-file-upload"></i> CARGAR ARCHIVO</a>
       </div>
     </div>
   </div>
+</div>
 
-  <div class="row justify-content-center content-help">
-    <div class="row justify-content-center col-md-10 offset-1" *ngIf="questions.length > 0">
-      <div class="col-md-3">
-        <button class="btn btn-light btn-call-friend" (click)="callFriend()" [disabled]="blockCall"> <img
-            src="../../../assets/images/telephone.png" alt="callFriend"> </button>
+
+<div class="container my-5" id="container-play" *ngIf="existFile">
+  <div class="col-md-12">
+    <h1 class="text-center title"> {{ textArchivo }}</h1> <br>
+  </div>
+  <div class="col-md-12 row justify-content-center">
+    <img src="../../../assets/images/logo.png" alt="">
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-md-12 my-5">
+      <div class="row justify-content-center">
+        <button class="btn btn-warning btn-lg" id="btn-play" data-toggle="modal" data-target="#ModalIniciarJuego">Inciar
+          Juego</button>
       </div>
+    </div>
+  </div>
+</div>
+
+
+
+<!-- Body-->
+<div class="container game-container mt-2" *ngIf="play">
+  <div class="row justify-content-center" *ngIf="questions.length > 0">
+    <div class="col-md-3">
+      <button class="btn btn-light btn-call-friend" (click)="callFriend()" *ngIf="!blockCall"> <img
+          src="../../../assets/images/telephone.png" alt="callFriend" width="50"> </button>
+
+      <button class="btn btn-light btn-call-friend" (click)="callFriend()" *ngIf="blockCall" [disabled]="blockCall">
+        <img src="../../../assets/images/telephone_no.png" alt="callFriend" width="50"> </button>
+
+      <button class="btn btn-light btn-option-50" (click)="option50To50()" *ngIf="!block50"> <img
+          src="../../../assets/images/followers.png" alt="option50To50" width="50"> </button>
+
+      <button class="btn btn-light btn-option-50" (click)="option50To50()" *ngIf="block50" [disabled]="block50"> <img
+          src="../../../assets/images/followers_no.png" alt="option50To50" width="50"> </button>
+
+      <button class="btn btn-light btn-public-support" (click)="publicSupport()" *ngIf="!blockPublic"> <img
+          src="../../../assets/images/feedback.png" alt="publicSupport" width="50"></button>
+
+      <button class="btn btn-light btn-public-support" (click)="publicSupport()" *ngIf="blockPublic"
+        [disabled]="blockPublic"> <img src="../../../assets/images/feedback_no.png" alt="publicSupport"
+          width="50"></button>
       <div class="col-md-3">
-        <button class="btn btn-light btn-option-50" (click)="option50To50()" [disabled]="block50"> <img
-            src="../../../assets/images/followers.png" alt="option50To50"> </button>
       </div>
-      <div class="col-md-3">
-        <button class="btn btn-light btn-public-support" (click)="publicSupport()" [disabled]="blockPublic"> <img
-            src="../../../assets/images/feedback.png" alt="publicSupport"></button>
-      </div>
-      <div class="col-md-3">
-        <div class="points-board">
-          <h2 class="text-center points-number"> {{ points }} </h2>
-        </div>
-      </div>
+    </div>
+    <div class="col-md-3 mt-3">
+      <h2 class="text-center"><i class="fas fa-shield-alt"></i> {{countSure}}</h2>
+    </div>
+    <div class="col-md-3 mb-4">
+      <h2 class="text-center points-number"><i class="fas fa-star"></i> {{ points }} </h2>
+    </div>
+
+    <div class="col-md-3 mb-4">
+      <h2 class="text-center points-number"><i class="fas fa-question-circle"></i> {{count + 1}} / {{ numberQuestions }}
+      </h2>
     </div>
   </div>
 
@@ -82,13 +115,27 @@
         <div class="col-md-6">
           <button class="btn btn-primary btn-lg btn-block btn-questions" id="BtnOpcA" (click)="validateAnswer('A')"
             [disabled]="press">
-            <p class="text-center" id="OpcA"> {{ item?.A }} </p>
+            <div class="row">
+              <div class="col-1">
+                <h3 class="text-center">A</h3>
+              </div>
+              <div class="col-11">
+                <p class="text-center" id="OpcA"> {{ item?.A }} </p>
+              </div>
+            </div>
           </button>
         </div>
         <div class="col-md-6">
           <button class="btn btn-primary btn-lg btn-block btn-questions" id="BtnOpcB" (click)="validateAnswer('B')"
             [disabled]="press">
-            <p class="text-center" id="OpcB"> {{ item?.B }} </p>
+            <div class="row">
+              <div class="col-1">
+                <h3 class="text-center">B</h3>
+              </div>
+              <div class="col-11">
+                <p class="text-center" id="OpcB"> {{ item?.B }} </p>
+              </div>
+            </div>
           </button>
         </div>
       </div>
@@ -97,13 +144,28 @@
         <div class="col-md-6">
           <button class="btn btn-primary btn-lg btn-block btn-questions" id="BtnOpcC" (click)="validateAnswer('C')"
             [disabled]="press">
-            <p class="text-center" id="OpcC"> {{ item?.C }} </p>
+            <div class="row">
+              <div class="col-1">
+                <h3 class="text-center">C</h3>
+              </div>
+              <div class="col-11">
+                <p class="text-center" id="OpcC"> {{ item?.C }} </p>
+              </div>
+            </div>
           </button>
         </div>
         <div class="col-md-6">
           <button class="btn btn-primary btn-lg btn-block btn-questions" id="BtnOpcD" (click)="validateAnswer('D')"
             [disabled]="press">
-            <p class="text-center" id="OpcD"> {{ item?.D }} </p>
+            <div class="row">
+              <div class="col-1">
+                <h3 class="text-center">D</h3>
+              </div>
+              <div class="col-11">
+                <p class="text-center" id="OpcD"> {{ item?.D }} </p>
+              </div>
+            </div>
+
           </button>
         </div>
       </div>
@@ -234,12 +296,13 @@
         <h2 class="text-center">Lo sentimos has perdido!!</h2>
         <h1 class="text-center">Puntaje: {{points}}</h1>
         <div class="row justify-content-center">
-            <img src="../../../assets/images/negative-vote.png" alt="">
+          <img src="../../../assets/images/negative-vote.png" alt="">
         </div>
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-success" (click)="gameOver()">OK</button>
+        <button type="button" class="btn btn-success" (click)="repetir()">JUGAR OTRA VEZ</button>
+        <button type="button" class="btn btn-danger" (click)="gameOver()">SALIR</button>
       </div>
     </div>
   </div>
@@ -260,7 +323,7 @@
       <div class="modal-body">
         <h2 class="text-center">{{textSure}}</h2>
         <div class="row justify-content-center">
-            <img [src]="imgSure" alt="">
+          <img [src]="imgSure" alt="">
         </div>
       </div>
       <div class="modal-footer">
@@ -270,3 +333,30 @@
   </div>
 </div>
 <!-- Fin Modal Seguros -->
+
+
+<!-- Modal Ganador -->
+<div class="modal fade" id="ModalGanador" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel"> {{titleSure}} </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <h2 class="text-center">{{textSure}}</h2>
+        <div class="row justify-content-center">
+          <img [src]="imgSure" alt="">
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" (click)="repetir()">JUGAR OTRA VEZ</button>
+        <button type="button" class="btn btn-danger" (click)="salir()">SALIR</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Fin Modal Ganador -->
