--- a/src/app/pages/instructions/instructions.component.html
+++ b/src/app/pages/instructions/instructions.component.html
@@ -1,4 +1,94 @@
-<p>instructions works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" routerLink="/home">
+    <img src="../../../assets/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> INICIO
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <form class="form-inline">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="../../../assets/files/Plantilla_Preguntas.xlsx" download><i
+            class="fas fa-file-download"></i> Descargar Plantilla</a>
+      </li>
+    </ul>
+  </form>
+</nav>
 
-<a class="btn btn-info" href="../../../assets/files/Plantilla_Preguntas.xlsx" download><i
-    class="fas fa-file-download"></i> Descargar Plantilla</a>
+<div class="container">
+  <div class="row justify-content-center col-md-12 my-4">
+    <h1 class="text-center title">INSTRUCCIONES</h1> <br>
+  </div>
+  <div class="row">
+    <div class="col-md-12 mt-0">
+      <p class="text-justify">
+        El juego <strong>¿Quién quiere ser Arquitecto de Software?</strong> tiene como propósito, divertir a los
+        participantes y al mismo tiempo aprender y reforzar nuevos conocimientos. Además, se busca desarrollar el
+        trabajo en equipo al colocar todo su conocimiento al servicio del todos con el fin de ganar.
+      </p>
+      <h4>Antes de comenzar</h4>
+
+      <ol>
+        <li>
+          <p class="text-justify">
+            Antes de comentar a utilizar el aplicativo, necesitas organizar tus preguntas en un archivo de Excel. <a
+              href="../../../assets/files/Plantilla_Preguntas.xlsx" download="">Aquí</a> puedes descargar la
+            <b>Plantilla</b>, la cual te servirá de guía para listar tus preguntas y respuestas.<br>
+            <b>NOTA: </b> Por ahora, el juego esta disponible solo para 15 preguntas.
+          </p>
+        </li>
+        <li>
+          <p class="text-justify">
+            Después el paso anterior, presiona el botón <b>¡JUGAR!</b> de la página de inicio y procede a cargar el
+            archivo con tus preguntas.
+          </p>
+        </li>
+        <li>
+          <p class="text-justify">
+            Una vez cargadas tus preguntas, puedes comenzar a jugar. Pero, te recomendamos realizar equipos de 2 a 5
+            personas para que sea más divertido. Esto es todo. Iniciar el juego y Listo! Disfruta y Aprende.
+          </p>
+        </li>
+        <p class="text-justify">
+          <b>¡RECUERDA!: </b> Se considera GANADOR, al equipo que responda la trivia de 15 preguntas o al equipo con
+          mayor puntuación
+        </p>
+      </ol>
+
+
+
+      <h4>Reglas de juego</h4>
+      <ol>
+        <li>
+          Realizar equipos de 2 a 5 personas
+        </li>
+        <li>
+          Se debe seleccionar a una persona representante de cada equipo, la cual dará respuesta a la trivia presentada.
+        </li>
+        <li>Se tiene 3 ayuda las cuales pueden ser utilizada una única vez.
+          Las ayudas planteadas son: 50/50, llamada a un amigo y ayuda del público. Las dos últimas ayudas solo se las
+          puede ejecutar con el apoyo de los mismos integrantes del equipo, tal como se describe a continuación.
+
+          <ul>
+            <li>
+              <b>50/50:</b> Elimina dos de las respuestas incorrectas
+            </li>
+            <li>
+              <b>Llama a un amigo:</b> puede solicitar a un integrante de su equipo, llamándole por nombre propio, para
+              que le ayude a responder la pregunta planteada.
+            </li>
+            <li>
+              <b>Ayuda del pública:</b> puede solicitar a todo su equipo la respuesta a la pregunta planteada.
+            </li>
+          </ul>
+
+        </li>
+        <li>
+          Se debe tener en cuenta que antes de seleccionar una respuesta, se debe estar muy seguro de esta, puesto que
+          una vez se presione la respuesta esta no es posible cambiar.
+        </li>
+      </ol>
+    </div>
+  </div>
+</div>
