--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,30 @@
-<p>about works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" routerLink="/home">
+    <img src="../../../assets/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> INICIO
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+</nav>
+
+
+<div class="container">
+  <div class="row justify-content-center col-md-12 my-5">
+    <h1 class="text-center title">ACERCA DE</h1> <br>
+  </div>
+  <div class="col-md-12 row justify-content-center">
+    <img src="../../../assets/images/logo.png" alt="">
+  </div>
+
+  <div class="container my-5">
+    <div class="row justify-content-md-center">
+      <div class="col-md-auto">
+        <p class="text-center my-0">Desarrollado por: Ing. Ivonne C. Barco</p>
+        <p class="text-center my-0">Arquitectura de Software</p>
+        <p class="text-center my-0">Especialización en Gerencia de Proyectos en Construcción de Software</p>
+        <p class="text-center my-0">Universidad Marina</p>
+        <p class="text-center my-0">Pasto - 2020</p>
+    </div>
+  </div>
+</div>
